Fix nav extra margin

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -8,3 +8,10 @@ Fix link icon position
     position: relative;
     top: 5px;
 }
+
+/*
+Fix nav extra margin
+*/
+.fr-nav__list {
+    margin: 0;
+}
